Start på oversigt.tex

--- a/oversigt.tex
+++ b/oversigt.tex
@@ -127,7 +127,7 @@
 
     \author{
       \Large{Benjamin Rotendahl - XMT224}
-      \\ \texttt{Benjamin@Rotendahl.dk} \\
+      \\ \texttt{Bero@di.ku.dk} \\
     }
 
     \date{
@@ -168,7 +168,49 @@
     \newpage                % Første rigtige side
     \setcounter{page}{1}    % Sætter rigtigt sidetal på første side
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Intro}
+
+\section{Forløbs oversigt}
+    Målet er at få flere studerende til at vælge en IT-uddannelse, eller en
+    kombinationsuddannelse af IT og et andet fag og skabe en interesse for datalogi.
+
+    % TODO Indsæt formelle rammer
+
+    Forløbet ekisterer i to versioner, en til klasser med en form for IT-fag,
+    og et forløb hvor datalogi kombineres med et andet fag.
+
+    \subsection{Forløbet for ITfag. }
+
+    \subsection{Forløbet for kombinationsfag}
+    I tilfælde af kombinationsfag kan vi ikke bruge den samme tilgang som
+    til ITfag grundet manglende erfaring indenfor programmering. Vi vil derfor
+    give kombinationsfagene mulighed for at udnytte deres egen data fra et tidligere
+    eller igangværende projekt til data analyse.
+    Hvis eleverne ikke har data til rådighed, stiller vi data med data eksemempler inden
+    for deres studieretningsfag.
+
+    Forløbet er
+    \begin{enumerate}
+        \item \unnderline{uge - Introduktion til data analyse} ~ \\
+        Fremvisning af de forskellige tekniker, 'sjov' demostration og forklaring af den
+        algortime der passer bedst til deres forsøgsdata.
+        Eleverene arbejder med ``python notebooks'' som er et modificertbart
+        undervisningsværktøj til python der ikke kræver installation, hvori der gennemgåes
+        øvelser i data analyse
+
+
+        \item \unnderline{uge - Introduktion til python og programmering} ~ \\
+        Der gennemgåes en python en python notebook hvor eleverne introduceres til
+        basal programmering, (variabler/data-typer, løkker, if/else betingelser, funktioner)
+
+
+        \item \unnderline{uge - Kombination af data analyse og python} ~ \\
+        Eleverne skal nu sammensætte deres nye viden inden for data analyse og programmering
+        og selv implementere en algortime hvor vi har givet en skabalon der indeholder
+        programmets struktur.
+    \end{enumerate}
+
+
+
 
 
 
