--- a/oversigt.tex
+++ b/oversigt.tex
@@ -169,20 +169,31 @@
     \setcounter{page}{1}    % Sætter rigtigt sidetal på første side
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Forløbs oversigt}
-    Målet er at få flere studerende til at vælge en IT-uddannelse, eller en
-    kombinationsuddannelse af IT og et andet fag og skabe en interesse for datalogi.
+\section{Introduktion}
+    Dette dokument stammer fra gymnasie tjensten fra
+    Datalogisk Institut ved København Universitets (DIKU)
 
-    % TODO Indsæt formelle rammer
+    Gymnasie tjenesten formål er at få flere studerende til at vælge en IT-uddannelse,
+    eller en kombinationsuddannelse af IT og et andet fag og
+    skabe en interesse for datalogi.
 
-    Forløbet ekisterer i to versioner, en til klasser med en form for IT-fag,
-    og et forløb hvor datalogi kombineres med et andet fag.
+    Vores plan for at nå dette mål er at udvikle udervisningsforløber til gymnasie klasser
+    der giver en introduktion til datalogi. Disse forløb vil vi i gymnasie tjenesten rejse
+    rundt og gennemføre med eleverne i undervisningstimerne.
 
-    \subsection{Forløbet for ITfag. }
-    
+    Vi estimerer at sådan et forløb ville tage cikra 6 skoletimer, der afvikles over 3 uger,
+    med to timers undervisnings per uge.
+
+    Forløbet ekisterer i to versioner, et til klasser med en form for IT-fag,
+    og et forløb til klasser uden IT-fag.
+
+    Vi er stadig i udviklingsfasen af disse forløb, og sætter derfor stor pris på respons
+    fra gymnasielærer.
+
+\section{Forløbet for ITfag. }
 
 
-    \subsection{Forløbet for kombinationsfag}
+\section{Forløbet for kombinationsfag}
     I tilfælde af kombinationsfag kan vi ikke bruge den samme tilgang som
     til ITfag grundet manglende erfaring indenfor programmering. Vi vil derfor
     give kombinationsfagene mulighed for at udnytte deres egen data fra et tidligere
@@ -210,6 +221,7 @@
         og selv implementere en algortime hvor vi har givet en skabalon der indeholder
         programmets struktur.
     \end{enumerate}
+
 
 
 
