Arbejdet på oversigt.tex

--- a/oversigt.tex
+++ b/oversigt.tex
@@ -198,7 +198,7 @@
     til ITfag grundet manglende erfaring indenfor programmering. Vi vil derfor
     give kombinationsfagene mulighed for at udnytte deres egen data fra et tidligere
     eller igangværende projekt til data analyse.
-    Hvis eleverne ikke har data til rådighed, stiller vi data med data eksemempler inden
+    Hvis eleverne ikke har data til rådighed, stiller vi data med data eksempler inden
     for deres studieretningsfag.
 
     Forløbet er
@@ -213,7 +213,7 @@
 
         \item \unnderline{uge - Introduktion til python og programmering} ~ \\
         Der gennemgåes en python en python notebook hvor eleverne introduceres til
-        basal programmering, (variabler/data-typer, løkker, if/else betingelser, funktioner)
+        basal programmering, (variabler, data-typer, løkker, if/else betingelser, funktioner)
 
 
         \item \unnderline{uge - Kombination af data analyse og python} ~ \\
@@ -222,10 +222,41 @@
         programmets struktur.
     \end{enumerate}
 
-
-
-
-
-
+    \subsection{Uge 1}
+        I den første uge vil vi introducere eleverne til forskellige teknikker 
+        indenfor naturvidenskab til at analysere data. Til dette formål kan der 
+        enten blive tilsendt data til os som de studerende har arbejdet med forinden 
+        (for eksempel i forbindelse med et eksperiment) som vi kan undervise de 
+        studerende i hvordan man kan få nyt information ud af, 
+        eller vi kan selv komme med noget data som eleverne kan arbejde med. 
+        Her vil vi gå i dybden med én teknik (for eksempel K-means neighbor) 
+        som har speciel relevans for den pågældende data. Her vil vi også forklare 
+        hvad en algoritme er, samt give en forklaring på hvordan den 
+        pågældende algoritme ser ud og fungerer. Til slut vil vi give de 
+        studerende nogle små øvelser i ``python notebooks'' som demonstrerer 
+        hvordan teknikkerne fungerer.
+       
+    \subsection{Uge 2}
+        I den anden uge vil vi introducere eleverne til basal programmering. Da 
+        vi regner med at de studerende ikke har prøvet at programmere før 
+        vil vi undervise dem i python, som er et nemt og tilgivende 
+        programmeringssprog for nybegyndere. Vi vil introducere dem til hvad 
+        variabler, data-typer, løkker, betingelser og funktioner er, og give 
+        dem små opgaver designet til at få dem langsomt introduceret til 
+        dette. Målet ved denne uge er ikke at gøre dem til  
+        programmører, men blot til at give dem en idé om hvad programmering er, 
+        samt hvad det kan bruges til.
+         
+    \subsection{Uge 3}
+        I den sidste uge vil vi lade de studerende demonstrere deres nye viden 
+        ved at implementere den data analyse teknik som vi snakkede om i den 
+        første uge. Vi vil give dem en skabelon som viser hvad strukturen af 
+        deres endelige kode skal se ud, med blanke linjer som de skal udfylde. 
+        Her vil vi tilbyde nogle forskellige sværhedsgrader (nem, middel og svær) 
+        hvor den nemme er for det meste fyldt ud i vores skabelon, mens den 
+        sværeste sværhedsgrad har mange manglende linjer kode som eleven skal 
+        udfylde. De studerende der hurtigt klarer sig igennem dette kan derefter 
+        arbejde på nogle mindre opgaver som vi har tilberedt.
+  
 
 \end{document}
