--- a/fagpakke.tex
+++ b/fagpakke.tex
@@ -191,8 +191,7 @@
     og et til klasser uden.
 
     Vi er stadig i udviklingsfasen af disse forløb, og vil derfor sætte stor
-    pris på at du overvejer forløbet der ville være relevant for din
-    klasse og sender feedback til os.
+    pris på din feedback.
 
 \section{Forløb for IT-klasser}
     Vi har haft svært ved at finde en undervisningsbeskrivelse af diverse
