Rettelser i fagpakke.tex og tilføjelser til .gitignore

--- a/fagpakke.tex
+++ b/fagpakke.tex
@@ -169,7 +169,6 @@
     \newpage                % Første rigtige side
     \setcounter{page}{1}    % Sætter rigtigt sidetal på første side
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{Introduktion}
     Vi repræsenterer gymnasietjenesten fra
     Datalogisk Institut ved København Universitet (DIKU)
@@ -214,8 +213,7 @@
         og lave et program der benytter sig af machine learning til at forudsige
         nye data.
     \end{enumerate}
-
-
+    \vspace{-1em}
     \subsection*{Uge 1}
         I den første uge vil vi introducere eleverne til forskellige teknikker
         indenfor naturvidenskab til at analysere data. Til dette formål kan der
@@ -272,7 +270,7 @@
         		analyse og programmering og selv implementere en algoritme
         		hvor vi har givet en skabelon der hjælper eleven på vej.
     \end{enumerate}
-
+    \vspace{-1em}
     \subsection*{Uge 1}
         I den første uge vil vi introducere eleverne til forskellige teknikker
         indenfor naturvidenskab til at analysere data. Til dette formål kan der
