--- a/fagpakke.tex
+++ b/fagpakke.tex
@@ -256,7 +256,7 @@
     	Forløbet er
     	\begin{enumerate}
         		\item \underline{Uge - Introduktion til data analyse} ~ \\
-        		Fremvisning af de forskellige tekniker, 'sjov' demonstration
+        		Fremvisning af de forskellige teknikker, 'sjov' demonstration
         		og forklaring af den algoritme der passer bedst til det
         		valgte data.
 
