--- a/machine learning/øvelser/K-means clustering.ipynb
+++ b/machine learning/øvelser/K-means clustering.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# Generer data:\n",
-    "X, y = make_blobs(n_samples=100, cluster_std=3, random_state=42)\n",
+    "X, y = make_blobs(n_sampnles=100, cluster_std=3, random_state=42)\n",
     "\n",
     "#Plot data:\n",
     "scatter(X[:,0], X[:,1], s=25, c='gray', edgecolor=cm.gray(.95), lw=0.5)"
@@ -106,6 +106,13 @@
     "Funktionen herunder forsøger at illustrere, hvordan $K$-means-algoritmen finder frem til klyngecentrene. Første argument til funktionen er datasættet, mens andet argument er antallet af klynger, man vil finde. Når du kører funktionen, vil du få mulighed for at gå frem og tilbage i iterationsprocessen og se, hvordan klyngerne langsomt finder sig til rette.\n",
     "\n",
     "Du kan køre funktionen flere gange - hver gang vil klyngecentrene starte et nyt sted. Du kan også prøve at lave et nyt datasæt ved at ændre variablen `random_state` i forrige kodeblok (eller helt fjerne den)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opgave 1.1"
    ]
   },
   {
@@ -128,13 +135,6 @@
    ],
    "source": [
     "plot_interaktiv_Kmeans(X, klynger=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Opgave 1.1"
    ]
   },
   {
