--- a/machine learning/øvelser/k nearest neighbours.ipynb
+++ b/machine learning/øvelser/k nearest neighbours.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [
     {
@@ -68,7 +68,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [
     {
@@ -100,7 +100,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [
     {
@@ -203,7 +203,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [
     {
@@ -248,7 +248,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [
     {
@@ -313,7 +313,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -387,9 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -405,9 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -450,9 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -491,9 +491,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -511,9 +511,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
@@ -543,9 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
-    "collapsed": false
+    "collapsed": False
    },
    "outputs": [],
    "source": [
