--- a/SRP/pr.tex
+++ b/SRP/pr.tex
@@ -166,14 +166,14 @@
     \setcounter{page}{1}    % Sætter rigtigt sidetal på første side
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Tilbud til Gymnasieelever på DIKU i efterårsferien}
-Kom ud på DIKU mandag og tirsdag i efterårs ferien og lær hvordan du kan skrive
+Kom ud på DIKU mandag og tirsdag i efterårsferien og lær hvordan du kan skrive
 rapporter i LaTeX.
 
 Der vil også være mulighed for at lære om databehandling og hvilke værktøjer der
 er gode at have. Forløbet er for alle gymnasieelever og kræver ingen
 programmeringserfaring.
 \subsection*{LaTeX}
-    Du kommer til at lære sproget LaTeX, det er en måde at skrive rapporter på
+    Du kommer til at lære sproget LaTeX, der er en måde at skrive rapporter på
     som er vidt brugt i den videnskabelige verden. Det håndtere matematiske
     formler og notationer bedre end Word, og har et hav af udvidelsespakker til
     kemi, fysik, biologi osv.
@@ -183,7 +183,7 @@ programmeringserfaring.
 
 \subsection*{Databehandling}
 Det vil også være muligt at få en introduktion til python og hvordan det kan
-bruges til databehandling og værktøjer til at arbejde videre.
+bruges til databehandling og værktøjer til at arbejde videre med.
 
 \subsection*{Forløb}
 
