--- a/SRP/pr.tex
+++ b/SRP/pr.tex
@@ -189,7 +189,7 @@ bruges til databehandling og værktøjer til at arbejde videre med.
 
 \Large{
 \begin{center}
-\begin{tabular}{ l || c | c }
+\begin{tabular}{ c || c | c }
     Tidspunkter &  Mandag & Tirsdag \\
     \hline
     10.00 & Intro til Latex & Workshop \\
